--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "express-handlebars": "^3.0.0",
     "method-override": "^2.3.9",
     "mongoose": "^4.11.3",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "xmlhttprequest": "^1.8.0"
   },
   "scripts": {
     "start": "nodemon index.js"
-    }
+  }
 }
